ikiwiki (2.46) UNRELEASED; urgency=low

  * aggregate: Add support for web-based triggering of aggregation 
    for people stuck on shared hosting without cron. (Sheesh.) Enabled
    via the `aggregate_webtrigger` configuration optiom.
  * Add pinger and pingee plugins, which allow setting up mirrors and branched
    wikis that automatically ping one another to stay up to date.
  * Optimised file statting code when scanning for modified pages;
    cut the number of system calls in half. (Still room for improvement.)

 -- Joey Hess <joeyh@debian.org>  Mon, 05 May 2008 19:34:51 -0400

ikiwiki (2.45) unstable; urgency=low

  * toc: Add the table of contents at sanitize time, rather than at format
    time. This allows the toc to be displayed when previewing an edit. It also
    avoids headers in the page template from showing up in the toc.
  * Add PREFIX/bin to the hardcoded PATH within ikiwiki.
  * Deal with different paths to perl when removing -T flag.
  * Add missing de.po. Closes: #471540
  * img: Support a title attribute, will be passed through to html.
    Closes: #478718
  * anonk: Add anonok_pagespec configuration setting that can be used to
    allow anonymous users to edit only matching pages. Closes: #478892
  * Fix ugly display when editing a page that has vanished.
  * srcfile now has an optional second parameter to avoid it throwing an error
    if the source file does not exist.
  * git: Put -- before the filename when calling git rev-list to avoid
    warning message when the file doesn't exist.
  * Add a Bundle::IkiWiki and Bundle::IkiWiki::Extras to the source for use
    with CPAN to install perl modules.
  * Add a cpan directory containing a CPAN::MyConfig that can ease use of
    CPAN to install in a home directory on shared hosting providers.
  * With these changes, it's pretty easy to install onto nearlyfreespeech.net
    and probably other shared hosting providers like dreamhost. Added
    a page documenting the process for nearlyfreespeech.